envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/ima0hw"
                route:
                  cluster: xray_trojan
                  upgrade_configs:
                  - upgrade_type: websocket
              
              - match:
                  prefix: "/whoami"
                route:
                  cluster: xray_vless
                  upgrade_configs:
                  - upgrade_type: websocket

              # CATCH-ALL DECOY — REDIRECT TO wtfismyip.com
              - match:
                  prefix: "/"
                direct_response:
                  status: 302
                  body:
                    inline_string: ""
                  response_headers_to_add:
                  - header:
                      key: Location
                      value: "https://wtfismyip.com/"
                    append: false
                  - header:
                      key: Content-Type
                      value: "text/html; charset=utf-8"
                    append: false

          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: xray_trojan
    connect_timeout: 2s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_trojan
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10000
  - name: xray_vless
    connect_timeout: 2s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vless
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10001
